--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-slick": "^0.23.13",
     "next": "15.3.1",
     "next-sanity": "^9.10.2",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-responsive-carousel": "^3.2.23",
