--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next/third-parties": "^15.3.1",
     "@portabletext/react": "^3.2.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.87.0",
     "@types/react-slick": "^0.23.13",
+    "@vercel/analytics": "^1.5.0",
     "next": "15.3.1",
     "next-sanity": "^9.10.2",
     "react": "^19.0.0",
