--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,15 @@
       "src": "next.config.js",
       "use": "@vercel/next"
     }
+  ],
+  "redirects": [
+    {
+      "source": "/:path*",
+      "has": [
+        { "type": "host", "value": "spvbstemple.org" }
+      ],
+      "destination": "https://www.spvbstemple.org/:path*",
+      "permanent": true
+    }
   ]
 } 
