--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@portabletext/react": "^3.2.1",
     "@types/react-slick": "^0.23.13",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "next": "15.3.1",
     "next-sanity": "^9.10.2",
     "react": "^19.0.0",
