--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,5 +1,8 @@
 # Supported browsers
->0.2%
+last 2 Chrome versions
+last 2 Safari versions
+last 2 Edge versions
+last 2 Samsung versions
 not dead
 not op_mini all
 not IE 11
