--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.3",
+    "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.17"
   },
